--- a/server/pkg/inertia/index.html
+++ b/server/pkg/inertia/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>{{ .title }}</title>
+  <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
 </head>
 
 <body>
